--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ form .gender-details .category .dot{
   margin: 45px 0;
 
  }
- form .button input{
+ form .button{
   height: 100%;
   width: 100%;
   outline: none;
@@ -118,7 +118,7 @@ form .gender-details .category .dot{
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 
  }
- form .button input:hover{
+ form .button:hover{
   background: linear-gradient(-135deg, #71b7e6, #9b59b6);
  }
  @media (max-width: 584px){
